2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Convert array type names from trailing "[]" to leading "*".

	* doc/ref.texh (Consulting Existing Converters)
	(Column Definitions, Result Transforms)
	(Single-Table Abstraction): ...here, in examples and blurbs.

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Move, update objectifier example.

	* doc/ref.texh (Consulting Existing Converters):
	Move objectifier example prior to "obsolete interface" heading;
	update to use ‘type-objectifier’; add heading "example".

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Index ‘define-db-col-type-array-variant’ errors.

	Omission from 2015-01-03, "Make
	‘define-db-col-type-array-variant’ strict".

	* doc/ref.texh (Defining New Converters):
	Add @bummer for ‘define-db-col-type-array-variant’.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add (database postgres-types) proc: register-array-variant

	* doc/ref.texh (Octet Molding/Mashing): Update naming
	intricacies blurb and table of examples.
	(Defining New Converters): Add @tsin for ‘register-array-variant’;
	add "obsolete" intro blurb to ‘define-db-col-type-array-variant’.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Move ‘oid-type-name-cache’ to new section.

	* doc/ref.texh (Octet Molding/Mashing): Add "Miscellaneous OMM"
	to menu; move ‘oid-type-name-cache’ and its blurb there.
	(Miscellaneous OMM): New node/section.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Modernize title.

	Continuation of 2014-01-25, "Modernize title page".

	* doc/guile-pg.texi: Set title to "Guile-PG Manual".
	(copying): Update year.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Define "type name" and "type SQL name".

	* doc/ref.texh (Octet Molding/Mashing): ...here; add a
	table of examples; mention "type name" / "type" conflation.

2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Add intermediary handling for type names.
